[gd_scene load_steps=9 format=3 uid="uid://b6twsln376grv"]

[ext_resource type="Script" path="res://framework/shells/default/shell.gd" id="1_qlls7"]
[ext_resource type="Script" path="res://framework/shells/default/app_item_list.gd" id="2_nwivk"]
[ext_resource type="Texture2D" uid="uid://mh48osisb557" path="res://themes/cyberfire/cyberfire_icons.png" id="2_pdc4m"]
[ext_resource type="Script" path="res://framework/shells/default/search_line_edit.gd" id="3_82wmq"]
[ext_resource type="Script" path="res://framework/shells/default/file_item_list.gd" id="4_hoiib"]
[ext_resource type="Script" path="res://framework/shells/default/settings_item_list.gd" id="5_6w2ko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2hlin"]
atlas = ExtResource("2_pdc4m")
region = Rect2(128, 56, 8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_eww1c"]
atlas = ExtResource("2_pdc4m")
region = Rect2(128, 48, 8, 8)

[node name="Shell" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("1_qlls7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="DesktopPanelContainer" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"ShellMenuPanelContainer"

[node name="MenuPanelContainer" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"ShellMenuPanelContainer"

[node name="VBoxContainer" type="TabContainer" parent="HBoxContainer/MenuPanelContainer"]
custom_minimum_size = Vector2(160, 240)
layout_mode = 2
current_tab = 0

[node name="Apps" type="ScrollContainer" parent="HBoxContainer/MenuPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="AppItemList" type="Container" parent="HBoxContainer/MenuPanelContainer/VBoxContainer/Apps"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
script = ExtResource("2_nwivk")

[node name="Files" type="ScrollContainer" parent="HBoxContainer/MenuPanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_tab_index = 1

[node name="FileItemList" type="Container" parent="HBoxContainer/MenuPanelContainer/VBoxContainer/Files"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
script = ExtResource("4_hoiib")

[node name="Settings" type="ScrollContainer" parent="HBoxContainer/MenuPanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_tab_index = 2

[node name="SettingsItemList" type="Container" parent="HBoxContainer/MenuPanelContainer/VBoxContainer/Settings"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
script = ExtResource("5_6w2ko")

[node name="SearchLineEdit" type="LineEdit" parent="HBoxContainer/MenuPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Search"
clear_button_enabled = true
select_all_on_focus = true
script = ExtResource("3_82wmq")

[node name="ShellBar" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"ShellBarPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="ShellBar"]
layout_mode = 2

[node name="DesktopButton" type="Button" parent="ShellBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme_type_variation = &"ShellButton"
toggle_mode = true
icon = SubResource("AtlasTexture_2hlin")
icon_alignment = 1
expand_icon = true

[node name="MenuButton" type="Button" parent="ShellBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme_type_variation = &"ShellButton"
toggle_mode = true
icon = SubResource("AtlasTexture_eww1c")
icon_alignment = 1
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="ShellBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[connection signal="app_clicked" from="HBoxContainer/MenuPanelContainer/VBoxContainer/Apps/AppItemList" to="." method="_on_app_item_list_app_clicked"]
[connection signal="down_pressed" from="HBoxContainer/MenuPanelContainer/SearchLineEdit" to="." method="_on_search_line_edit_down_pressed"]
[connection signal="text_changed" from="HBoxContainer/MenuPanelContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="up_pressed" from="HBoxContainer/MenuPanelContainer/SearchLineEdit" to="." method="_on_search_line_edit_up_pressed"]
[connection signal="pressed" from="ShellBar/HBoxContainer/DesktopButton" to="." method="_on_desktop_button_pressed"]
[connection signal="pressed" from="ShellBar/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
